added skills section

--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -98,3 +98,8 @@ main{
     font-weight: 700;
     color: #474747;
 }
+/* What i do style */
+.what-i-do{
+    margin: 80px auto;
+    text-align: center;
+}
