--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -66,18 +66,21 @@ main{
     max-width: 1140px;
     margin: 0 auto;
 }
+section{
+    margin-top: 130px;
+}
 /* about Section style */
 .about{
-    margin-top: 130px;
     background: #FFF8F3;
     text-align: center;
     border-radius: 10px;
     padding: 130px 150px;
 }
 .section-title{
-    margin-bottom: 30px;
+    margin-bottom: 50px;
     font-weight: 700;
     font-size: 35px;
+    text-align: center;
 }
 .section-description{
     color: #757575;
@@ -99,7 +102,24 @@ main{
     color: #474747;
 }
 /* What i do style */
-.what-i-do{
-    margin: 80px auto;
-    text-align: center;
+
+.skills-container{
+    display: flex;
+    gap: 24px;
 }
+.skill{
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;padding: 30px;
+    margin-top: 80px;
+}
+.skill-title{
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.skill-description{
+    color: #757575;
+}
+/* Resume related style */
