--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -155,6 +155,33 @@ section{
     color: #757575;
 }
 .resume-button{
-    margin-top: 50px;
+    margin: 50px 0 110px 0;
     text-align: center;
+}
+/* Contact style */
+.contact h3{
+    text-align: left;
+}
+.contact p{
+    margin-bottom: 30px;
+}
+.contact a{
+    text-decoration: none;
+    margin-right: 10px;
+}
+.contact{
+    display: flex;
+    gap: 100px;
+    background-color: #FFF8F3;
+    padding: 130px 200px;
+    
+}
+.contact input[type="text"],input[type="email"], textarea{
+    margin-bottom: 24px;
+    border: 0;
+    width: 100%;
+    padding: 18px 30px;
+}
+input{
+
 }
