--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -12,7 +12,7 @@
 nav{
     display: flex;
     justify-content: space-between;
-    margin: 50px 200px;
+    padding: 50px 200px;
 }
 
 .nav-title{
@@ -39,6 +39,13 @@ nav li{
     padding: 18px 35px;
     background-color: #FD6E0A;
     border-radius: 5px;
+}
+#contact-btn{
+    color:  #FD6E0A;
+    border: 1px solid #FD6E0A;
+    background-color: #FFF8F3;
+    margin-left: 30px;
+   
 }
 /* banner styles */
 .banner{
@@ -75,6 +82,12 @@ section{
     text-align: center;
     border-radius: 10px;
     padding: 130px 150px;
+}
+.what-i-do .pera{
+    width: 700px;
+    margin: 0 auto;
+    text-align: center;
+
 }
 .section-title{
     margin-bottom: 50px;
